# BirthdayRS

./: .dockerignore  .flake8  .gitignore  CLAUDE.md  Dockerfile  README.md  README.zh-CN.md  config.example.yml  logo.txt  pyproject.toml  requirements.txt
.github/actions/: action.yml
.github/workflows/: ci.yml  daily_check.yml  daily_check_dev.yml  docker-publish.yml  docs.yml  update-readme.yml
docs/: .gitignore  Makefile  api.md  changelog.md  conf.py  conf_zh.py  configuration.md  contributing.md  index.md  installation.md  modules.md  quickstart.md
docs/_static/: logo-banner.txt  logo.png.placeholder  logo.txt
docs/zh/: api.md  changelog.md  configuration.md  contributing.md  index.md  installation.md  modules.md  quickstart.md
src/: __init__.py  main.py
src/core/: checker.py  config.py  config_manager.py  notification_factory.py
src/notification/: notification_base.py  sender.py  sender_email.py  sender_serverchan.py
templates/: birthday.html
tests/: conftest.py  test_config_manager.py  test_email.py  test_main.py  test_notification_factory.py
