[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "birthdayrs"
version = "0.1.0"
description = "Birthday Reminder System"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0.0",
    "jinja2>=3.0.0",
    "lunar_python>=1.3.0",
    "python-dotenv>=1.0.0",
    "aiosmtplib>=2.0.0",
    "click",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-cov>=3.0.0",
]

[project.scripts]
birthdayrs = "birthdayrs.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=birthdayrs"

[tool.uv]
# Add any uv-specific configuration here if needed